Bug 1073494 - Audio is not routing to headset while playback is on BT. r=mwu